# alignedTextGrid

./: .coveragerc  .gitignore  .nojekyll  .readthedocs.yml  README.md  README.qmd  index.html  listings.json  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: build-docs.yml  pypi_publish.yml  test_and_run.yml
alignedTextGrid/sequences/: sequences.py  tiers.py  wordAndPhone.py
cookbook/: building_atg.html  index.html  overlaps.html  phrase_creation.html
doc_src/: SUMMARY.md  _quarto.yml  gen_ref_pages.py  index.ipynb  index.md  index.qmd  objects.json
doc_src/reference/: AlignedTextGrid.qmd  Bottom.qmd  Levels.qmd  Misc.qmd  Phone.qmd  PrStr.qmd  PrecedenceMixins.qmd  Ranges.qmd  SequenceInterval.qmd  SequencePoint.qmd  SequencePointTier.qmd  SequenceTier.qmd  TierGroup.qmd  TierMixins.qmd  ToBI.qmd  Top.qmd  TurningPoints.qmd  Word.qmd  _sidebar.yml  custom_classes.qmd  index.qmd  sequences.sequences.SequenceInterval.qmd  to_df.qmd
doc_src/usage/: 01_tg-read.ipynb  index.ipynb  reading_recoded.TextGrid
docs/: .gitignore  404.html  Makefile  _quarto.yml  gen_ref_pages.py  index.html  index.md  index.qmd  objects.inv  objects.json  objects.py  sitemap.xml
docs/cookbook/: building_atg.qmd  index.qmd  overlaps.qmd  phrase_creation.qmd
docs/gen_ref_pages/: index.html
docs/reference/: InTierMixins.qmd  Ranges.qmd  SequenceInterval.qmd  SequencePoint.qmd  TierGroupMixins.qmd
docs/usage/: index.html  reading_recoded.TextGrid
examples/: custom_classes.ipynb  examples.ipynb  spritely.TextGrid
fave_recode/textgrid_process/: processNames.py  processTextGrid.py  wordAndPhone.py
reference/: AlignedTextGrid.html  Bottom.html  InTierMixins.html  Levels.html  Misc.html  Phone.html  PointsGroup.html  PrStr.html  PrecedenceMixins.html  Ranges.html  SequenceInterval.html  SequenceList.html  SequencePoint.html  SequencePointTier.html  SequenceTier.html  TierGroup.html  TierGroupMixins.html  TierMixins.html  ToBI.html  Top.html  TurningPoints.html  WithinMixins.html  Word.html  custom_classes.clone_class.html  custom_classes.get_class_hierarchy.html  custom_classes.html  index.html  sequences.sequences.SequenceInterval.html  to_df.html
requirements/: dev.txt  docs.txt
site_libs/bootstrap/: bootstrap-2d2c3c1dc8fcebd689918bbad00a5354.min.css  bootstrap-dark-a5cec38defc11f7561b05eff66b91810.min.css
src/alignedTextGrid/: alignedTextGrid.py  custom_classes.py
src/aligned_textgrid/: __init__.py  aligned_textgrid.py  custom_classes.py  pointspool.py  sequence_list.py
tests/: test_add_append.py  test_aligned_textgrid.py  test_custom_classes.py  test_mixins.py  test_output.py  test_sequence_list.py  test_sequences.py  test_textgrids.py  test_within.py
tests/test_data/: KY25A_1_multi.TextGrid  josef-fruehwald_speaker_dup.TextGrid
tests/test_polar/: test_polar_classes.py
tests/test_sequences/: test_points.py  test_sequences.py
tests/test_tiers/: test_PointTier.py  test_SequenceTier.py
usage/: index.html
usage/01_TextGrids/: 01_tg-nav.html  02_tg-info.html  03_tg-mod.html
usage/02_Sequences/: 00_sequence_structure.html  (+3 more)
(+61 files in other folders)
