[tool.poetry]
name = "alignedTextGrid"
version = "0.1.0"
description = "Classes for defining sequential information from TextGrids"
authors = ["JoFrhwld <JoFrhwld@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "alignedTextGrid", from="src"}]
exclude = [
    "notebools/",
    "examples/"
]

[tool.poetry.dependencies]
python = "^3.10"
praatio = "^6.0.0"
pyyaml = "^6.0"
syllabify = {git = "https://github.com/Forced-Alignment-and-Vowel-Extraction/syllabify.git"}
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.1"
importlib = "^1.0.4"
mkdocs = "^1.4.2"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
testpaths = "tests"